--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 
 title: "Sens des prénoms en transgénérationnel"
 description: "Sens des prénoms en transgénérationnel — Rosemonde Rossel"
+navbar-brand: "Sens des prénoms"
 locale: fr
 country: FR # FB ne reconnait pas CH
 
